--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
 		"@rollup/plugin-terser": "^0.4.4",
 		"@rollup/plugin-typescript": "^11.1.6",
 		"@types/chrome": "^0.0.263",
+		"esm-gamecontroller.js": "^1.0.4",
 		"rollup": "^4.13.0",
+		"tslib": "^2.6.2",
 		"typescript": "^5.4.2",
 		"wireit": "^0.14.4"
 	},
